--- a/src/component/Projects/projectCard.module.css
+++ b/src/component/Projects/projectCard.module.css
@@ -26,6 +26,7 @@
     margin-top: 14px;
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
     flex-wrap: wrap;
     list-style: none;
 }
